--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,7 @@ SMTP_PASSWORD=
 SMTP_FROM=andreyvolyanik@gmail.com
 JWT_SECRET=
 APP_DOMAIN=
+BACKEND_DOMAIN=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
+CLOUDINARY_CLOUD_NAME=
