--- a/docs/swagger/paths/contacts/get.yaml
+++ b/docs/swagger/paths/contacts/get.yaml
@@ -58,7 +58,7 @@ responses:
             data:
               type: array
               items:
-                $ref: ../../components\schemas\Contact.yaml
+                $ref: ../../components/schemas/Contact.yaml
             totalItems:
               type: number
               description: Total number of contacts
@@ -76,6 +76,6 @@ responses:
                 hasNextPage:
                   type: boolean
   '401':
-    $ref: ../../components\responses\401.yaml
+    $ref: ../../components/responses/401.yaml
   '500':
-    $ref: ../../components\responses\500.yaml
+    $ref: ../../components/responses/500.yaml
