--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "mongoose": "^8.6.2",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.15",
-    "pino-http": "^10.3.0"
+    "pino-http": "^10.3.0",
+    "swagger-ui-express": "^5.0.1"
   }
 }
